# TC4034.10

./: Proyecto_Inicio_Equipo16.docx  README.md
Bak/: Articulo 2.docx  Proyecto_Avance_1.ipynb  Proyecto_Avance_1_16_.docx
Movies/: Avance de Proyecto 1_ Sistema de Recomendación.docx  Proyecto_Avance_1_16.docx  Proyecto_Avance_2_equipo16.docx  Proyecto_Avance_3_equipo16.docx
RecommendationSystem/: pyproject.toml
RecommendationSystem/Notebooks/: Parte 3.ipynb  Parte 3_Ed.ipynb  Parte2.ipynb  Proyecto_Avance_1.ipynb  Proyecto_Avance_2_Equipo16.ipynb  Proyecto_Avance_4_1_Equipo16.ipynb  Proyecto_Avance_4_Equipo16.ipynb
