[tool.poetry]
name = "recommendationsystem"
version = "0.1.0"
description = ""
authors = ["Edwin Hernandez <edwin.hdez@live.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.0"
ipykernel = "^6.29.4"
seaborn = "^0.13.2"
implicit = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
